Fix gap

--- a/style/index.css
+++ b/style/index.css
@@ -167,6 +167,7 @@ section div span div {
   flex-direction: row;
   margin: 0px auto;
   width: 90%;
+  gap: 0px;
 }
 
 section div span h3 {
